[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
plugins = { path = "../plugins" }
utilities = { path = "../utilities" }

bincode = { version = "*" }
tokio = { version = "*", features = ["full"] }
clap = { version = "*", features = ["cargo", "derive"] }
serde = { version = "*", features = ["derive"] }
regex = "*"
shlex = "*"
rustyline = "*"
goldberg = "*"
